[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/sound/MusicPlayer.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "FadePrimaryOutSecondaryIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayers/PrimaryTrack:volume_db")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayers/SecondaryTrack:volume_db")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -40.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MusicPlayers/PrimaryTrack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeSecondaryOutPrimaryIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayers/PrimaryTrack:volume_db")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayers/SecondaryTrack:volume_db")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MusicPlayers/SecondaryTrack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayers/PrimaryTrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayers/SecondaryTrack:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -40.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MusicPlayers/SecondaryTrack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MusicPlayers/PrimaryTrack:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicPlayers" type="Node" parent="."]

[node name="PrimaryTrack" type="AudioStreamPlayer" parent="MusicPlayers"]
bus = "Music"

[node name="SecondaryTrack" type="AudioStreamPlayer" parent="MusicPlayers"]
volume_db = -40.0
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadePrimaryOutSecondaryIn = SubResource( 1 )
anims/FadeSecondaryOutPrimaryIn = SubResource( 2 )
anims/RESET = SubResource( 3 )
